--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section class="intro container top-white">
     <h2 class="section-main">Quinestiologia</h2>
     <p class="intro-text">
-      ¿Estás buscando mejorar tu salud y bienestar a través del movimiento y la actividad física? ¿Estás en el lugar correcto! Como kinesiólogo experimentado, me enfoco en ayudar a mis pacientes a recuperar su movilidad y fuerza después de lesiones o enfermedades.
+      ¿Estás buscando mejorar tu salud y bienestar a través del movimiento y la actividad física? !Estás en el lugar correcto! Como kinesiólogo experimentado, me enfoco en ayudar a mis pacientes a recuperar su movilidad y fuerza después de lesiones o enfermedades.
     </p>
   </section>
 
@@ -102,4 +102,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
